[🐛 Fix] Space envely only on mobile

--- a/sass/components/_header.sass
+++ b/sass/components/_header.sass
@@ -6,8 +6,8 @@ header
   border-radius: 0px 0px 10px 10px
   box-shadow: var(--header-shadow)
   display: flex
-  justify-content: space-evenly
-  padding: 30.5px 0
+  justify-content: space-between
+  padding: 30.5px 45px
   align-items: center
   position: absolute
   width: 100%
@@ -105,6 +105,10 @@ header
 @media only screen and (max-width: 800px)
   header
     flex-wrap: wrap
+    justify-content: space-evenly
+    padding: 30.5px 0
+    width: 95%
+    left: 2.5%
     #menuIcon
       color: var(--text-color)
       fill: currentColor
